# iRM_Embedded_2026

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
boards/: CMakeLists.txt
boards/DJI_Board_TypeA/: PWM_README.md
boards/DJI_Board_TypeC/: PWM_README.md
boards/DM_MC_01/: DM_MC01_general.ioc  PWM_README.md
boards/DM_MC_02/: CMakeLists.txt  DM_MC_02.ioc  Makefile  PWM_README.md  README  STM32H723VGTx_FLASH.ld  fix_linker_script.sh  mc02_guide.md  stm32h723vgtx_flash.ld
boards/DM_MC_02/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
boards/DM_MC_02/Core/Src/: adc.c  dma.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c  usart.c
boards/DM_MC_02/Drivers/CMSIS/Include/: core_cm4.h
boards/DM_MC_02/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
boards/DM_MC_02/USB_DEVICE/User/: user_usbd_desc.c
boards/DM_MC_02/cmake/: gcc-arm-none-eabi.cmake  stm32h723vgtx_flash_custom.ld
boards/DM_MC_02/cmake/stm32cubemx/: CMakeLists.txt
cmake/: arm_toolchain.cmake
debug/OpenOCD/: cmsis-dap_h723.cfg
examples/: CMakeLists.txt
examples/buzzer/: CMakeLists.txt  buzzer_raw_test.cc  main.cc  main_mc02.cc
examples/can/: CMakeLists.txt  main_mc02.cc
examples/dbus/: CMakeLists.txt  mc01.cc  mc02.cc  typeA.cc  typeC.cc
examples/hero/: hero_shooter_2023.cc
examples/imu/: CMakeLists.txt  main_mc02.cc
examples/led/: CMakeLists.txt  ws2812_led_mc02.cc
examples/minipc/: MotorTest.cc
examples/motor/: CMakeLists.txt  HERO_SERVO.cc  can_raw_transmit.cc  dm3519_vel.cc  m2006_mc02.cc  m3508.cc  m3508_mc02.cc  m3508_speed.cc  m3508_steering.cc  m4310_mit.cc  m6020.cc  m6020_pos.cc  pwm.cc
examples/omni/: CMakeLists.txt  main.cc
examples/pwm/: CMakeLists.txt  pwm_mc02.cc
examples/rtos/: CMakeLists.txt  rtos_mc02.cc
examples/sensor/: main.cc
examples/shooter/: m3508_hero_load.cc
examples/steering/: main.cc  steering_alignment.cc
examples/uart/: CMakeLists.txt  main.cc
examples/usb/: CMakeLists.txt  usb_mc02.cc
examples/usb_print/: CMakeLists.txt  main.cc
examples/weighscale/: CMakeLists.txt  main.cc
shared/: CMakeLists.txt
shared/bsp/: bsp_buzzer.cc  bsp_can_bridge.cc  bsp_can_bridge.h  bsp_fdcan.cc  bsp_fdcan.h  bsp_imu.cc  bsp_imu.h  bsp_print.cc  bsp_pwm.cc  bsp_pwm.h  bsp_uart.cc  bsp_usb.cc  bsp_usb_stub.cc  bsp_ws2812.cc  bsp_ws2812.h
shared/libraries/: dbus_mc02.cc  dbus_mc02.h  encoder.h  gimbal.cc  gimbal.h  motor.cc  motor.h  omni.cc  omni.h  supercap.h  utils.cc  weighscale.cc  weighscale.h
vehicles/: CMakeLists.txt
vehicles/Dart/: 7_21_GDT_Test.cc  CMakeLists.txt  dart_gimbal.cc  dart_gimbal_trial.cc  dart_loading_example.cc
vehicles/Engineer/arm/src/: arm.cc  main.cc
vehicles/Engineer/chassis/include/: arm_translate_task.h
vehicles/Engineer/chassis/src/: arm_translate_task.cc  chassis_task.cc  steering_6020.cc
vehicles/Hero/Hero2023/: main.cc
vehicles/Omni/: CMakeLists.txt  main.cc  main_mc02.cc
vehicles/OmniMigrated/: CMakeLists.txt  main.cc
vehicles/Steering/: chassis.cc  config.md  gimbal.cc
